--- a/home.html
+++ b/home.html
@@ -325,7 +325,7 @@
                 </a>
                 <h1 class="slider-text big-title title text-uppercase" data-animation-in="fadeInLeft"
                   data-delay-in="0.6">
-                  Avengers
+                  DEMON SLAYER
                 </h1>
                 <div class="d-flex flex-wrap align-items-center fadeInLeft animated" data-animation-in="fadeInLeft"
                   style="opacity: 1">
@@ -346,22 +346,19 @@
                   </div>
                 </div>
                 <p data-animation-in="fadeInUp">
-                  When Tony Stark and Bruce Banner try to jump-start a dormant
-                  peacekeeping program called Ultron, things go horribly wrong
-                  and it's up to Earth's nightest heroes to stop the
-                  villainous Ultron from enacting his terrible plan.
+                  In ancient times, there was a legend of man-eating demons that roamed the depths of the forest. Because of this, people in the village never go out in the dark. Legend also says that there is a Demon Slayer who always appears at night to destroy these bloodthirsty demons. For young Tanjiro, that folk tale has become the bitter reality he has to endure...
                 </p>
                 <div class="trending-list" data-animation-in="fadeInUp" data-delay-in="1.2">
                   <div class="text-primary title starring">
                     Starring :
-                    <span class="text-body">Robert Downey Jr., Chris Evans, Mark Ruffalo</span>
+                    <span class="text-body">Makoto Shinkai, Nanoka Hara, Eri Fukatsu</span>
                   </div>
                   <div class="text-primary title genres">
-                    Genres : <span class="text-body">Action</span>
+                    Genres : <span class="text-body">Animation</span>
                   </div>
                   <div class="text-primary title tag">
                     Tags :
-                    <span class="text-body">Action, Adventure, Horror</span>
+                    <span class="text-body">Animation, Adventure, Horror</span>
                   </div>
                 </div>
                 <div class="d-flex align-items-center r-mb-23 mt-4" data-animation-in="fadeInUp" data-delay-in="1.2">
@@ -391,7 +388,7 @@
                 </a>
                 <h1 class="slider-text big-title title text-uppercase" data-animation-in="fadeInLeft"
                   data-delay-in="0.6">
-                  Frozen
+                  Avatar 2
                 </h1>
                 <div class="d-flex flex-wrap align-items-center fadeInLeft animated" data-animation-in="fadeInLeft"
                   style="opacity: 1">
@@ -412,11 +409,7 @@
                   </div>
                 </div>
                 <p data-animation-in="fadeInUp">
-                  When the newly crowned Queen Elsa accidentally uses her
-                  power to turn things into ice to curse her home in infinte
-                  winter, her sister Anna teams up with a mountain man, his
-                  playful reindeer, and a snowman to change the weather
-                  condition.
+                  The two main characters, Jake Sully and Neytiri, now a couple, vow to stay together. However, the two are forced to leave home and explore new lands on the moon Pandora, which is when the old dangers return to them.
                 </p>
                 <div class="trending-list" data-animation-in="fadeInUp" data-delay-in="1.2">
                   <div class="text-primary title starring">
@@ -536,7 +529,7 @@
                     </div>
                     <div class="block-description">
                       <h6 class="iq-title">
-                        <a href="#"> Insidious </a>
+                        <a href="#"> John Wick 4 </a>
                       </h6>
                       <div class="movie-time d-flex align-items-center my-2">
                         <div class="badge badge-secondary p-1 mr-2">16+</div>
@@ -580,7 +573,7 @@
                     </div>
                     <div class="block-description">
                       <h6 class="iq-title">
-                        <a href="#"> War </a>
+                        <a href="#"> Black Adam </a>
                       </h6>
                       <div class="movie-time d-flex align-items-center my-2">
                         <div class="badge badge-secondary p-1 mr-2">12+</div>
@@ -624,7 +617,7 @@
                     </div>
                     <div class="block-description">
                       <h6 class="iq-title">
-                        <a href="#"> Five Feet Apart </a>
+                        <a href="#">One Piece Film: Red</a>
                       </h6>
                       <div class="movie-time d-flex align-items-center my-2">
                         <div class="badge badge-secondary p-1 mr-2">18+</div>
@@ -668,7 +661,7 @@
                     </div>
                     <div class="block-description">
                       <h6 class="iq-title">
-                        <a href="#"> Chhichore </a>
+                        <a href="#"> Babylon </a>
                       </h6>
                       <div class="movie-time d-flex align-items-center my-2">
                         <div class="badge badge-secondary p-1 mr-2">10+</div>
@@ -776,7 +769,7 @@
                     </div>
                     <div class="block-description">
                       <h6 class="iq-title">
-                        <a href="#"> Mulan </a>
+                        <a href="#"> THE FIRST SLAM DUNK </a>
                       </h6>
                       <div class="movie-time d-flex align-items-center my-2">
                         <div class="badge badge-secondary p-1 mr-2">10+</div>
@@ -820,7 +813,7 @@
                     </div>
                     <div class="block-description">
                       <h6 class="iq-title">
-                        <a href="#"> Laxmii </a>
+                        <a href="#">Everything Everywhere All at Once </a>
                       </h6>
                       <div class="movie-time d-flex align-items-center my-2">
                         <div class="badge badge-secondary p-1 mr-2">18+</div>
@@ -864,7 +857,7 @@
                     </div>
                     <div class="block-description">
                       <h6 class="iq-title">
-                        <a href="#"> Captain America </a>
+                        <a href="#"> Nhà Bà Nữ</a>
                       </h6>
                       <div class="movie-time d-flex align-items-center my-2">
                         <div class="badge badge-secondary p-1 mr-2">12+</div>
@@ -908,7 +901,7 @@
                     </div>
                     <div class="block-description">
                       <h6 class="iq-title">
-                        <a href="#"> Life of Pie </a>
+                        <a href="#"> Ant Man 2</a>
                       </h6>
                       <div class="movie-time d-flex align-items-center my-2">
                         <div class="badge badge-secondary p-1 mr-2">11+</div>
@@ -952,7 +945,7 @@
                     </div>
                     <div class="block-description">
                       <h6 class="iq-title">
-                        <a href="#"> Mission Mangal </a>
+                        <a href="#"> SHAZAM 2 </a>
                       </h6>
                       <div class="movie-time d-flex align-items-center my-2">
                         <div class="badge badge-secondary p-1 mr-2">12+</div>
