--- a/home.html
+++ b/home.html
@@ -1003,7 +1003,7 @@
                 <li class="slick-bg">
                   <a href="#">
                     <img src="images/top-10/01.jpg" class="img-fluid w-100" alt="" />
-                    <h6 class="iq-title"><a href="#">Harry Potter</a></h6>
+                    <h6 class="iq-title"><a href="#">Black Panther</a></h6>
                   </a>
                 </li>
                 <li class="slick-bg">
